# scope-rs

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  cmd.yaml
.claude/skills/test-tui/: SKILL.md
.githooks/: pre-commit
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  commit_checks.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  commit-checks.yml  fmt-check.yml  release.yml  rust.yml  version-guard.yml
assets/: cmds.yaml  lorem.txt
plugins/: README.md  analytics.lua  api.md  auto_test.lua  echo.lua  esp.lua  hello.lua  idf.lua  new_plugin.lua  peripheral.lua  plugin_dev_guide.md  robot.lua  robot_status.lua  scope.lua  serial.lua  shell.lua  test.lua  west.lua
src/: ble.rs  cli.rs  command_bar.rs  error_pop_up.rs  graph.rs  interface.rs  list.rs  loop_back.rs  main.rs  messages.rs  plugin.rs  plugin_installer.rs  plugin_manager.rs  process.rs  recorder.rs  rich_string.rs  serial.rs  storage.rs  task_bridge.rs  text.rs  theme.rs  typewriter.rs  view.rs
src/graphics/: ansi.rs  buffer.rs  bytes.rs  graphics_task.rs  headless.rs  message_filter.rs  mod.rs  palette.rs  rich_string.rs  screen.rs  selection.rs  special_char.rs
src/infra/: backup.rs  blink.rs  config.rs  logger.rs  messages.rs  mod.rs  mpmc.rs  recorder.rs  session.rs  tags.rs  task.rs  timer.rs  typewriter.rs
src/inputs/: history.rs  inputs_task.rs  key_decode.rs  key_encode.rs  mod.rs
src/interfaces/: file_transfer.rs  mod.rs  rtt_if.rs  serial_if.rs
src/old/: blink_color.rs  command_bar.rs  messages.rs  task_bridge.rs
src/plugin/: bridge.rs  engine.rs  messages.rs  method_call.rs  mod.rs  plugin.rs  plugin_engine.rs  shell.rs  thread.lua  unpack.lua
src/serial/: mod.rs  serial_if.rs
tests/: tui_e2e.rs
videos/: Makefile  README.md  ansi_color.py  invisibles.py  lib.py  lib.sh  record.sh
videos/000_hero/: steps.sh  video.cast
videos/000_hero/assets/: tags.yml
videos/000_scripts/: ansi_color.py  invisibles.py
videos/001_send_data/: send_data.tape  steps.sh  video.cast  video.py  video.tape
videos/002_hexa/: steps.sh  video.cast  video.py  video.tape
videos/003_cmds/: background.sh  cmds.yaml  video.tape
videos/004_history/: steps.sh  video.cast  video.py  video.tape
videos/005_reconnect/: background.sh  steps.sh  video.cast  video.py  video.tape
videos/006_ansi/: steps.sh  video.cast  video.py  video.tape
videos/007_invisible/: background.sh  steps.sh  video.cast  video.py
videos/008_setup_serial/: background.sh  steps.sh  video.cast  video.py  video.tape
videos/009_save/: steps.sh  video.cast  video.py  video.tape
videos/010_record/: background.sh  steps.sh  video.cast  video.py  video.tape
videos/011_plugin/: steps.sh  video.cast  video.py  video.tape
videos/011_plugin/plugins/: echo.lua
videos/012_tags/: steps.sh  video.cast
videos/012_tags/assets/: tags.yml
videos/013_send_file/: opts.env  steps.sh  video.cast
videos/013_send_file/assets/: data.txt
videos/014_select_copy/: steps.sh  video.cast
videos/015_search/: steps.sh  video.cast
videos/plugins/: echo.lua
