[package]
name = "scope-monitor"
description = "A multi-platform serial monitor with user-extensible features"
authors = ["Matheus T. dos Santos <matheuswhite1@protonmail.com>"]
version = "0.4.3"
edition = "2024"
rust-version = "1.92.0"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/matheuswhite/scope-rs"
homepage = "https://github.com/matheuswhite/scope-rs"
keywords = ["serial", "monitor", "windows", "linux", "plugin"]
exclude = [
  "/.git/",
  "/.github/",
  "/.idea/",
  "/.vscode/",
  "/.zed/",
  "/imgs/",
  "/videos/",
  "/.gitignore",
  "/CONTRIBUTING.md",
]

[badges]
maintenance = { status = "actively-developed" }

[[bin]]
name = "scope"
path = "src/main.rs"

[dependencies]
serialport = "4.4.0"
ratatui = "0.26.1"
crossterm = { version = "0.27.0", features = ["default", "event-stream"] }
futures = "0.3.30"
chrono = "0.4.23"
serde = "1.0"
serde_yaml = "0.9"
rand = "0.8.5"
clap = { version = "4.1.9", features = ["derive"] }
mlua = { version = "0.9.6", features = ["lua54", "vendored", "async", "send"] }
anyhow = "1.0.79"
dirs = "5"
tokio = { version = "1.43.1", features = ["full"] }
regex = "1.10.5"
lipsum = "0.9.1"
arboard = "3.6.1"
probe-rs = "0.31.0"

[target.'cfg(windows)'.dependencies]
ctrlc = "3.4.3"
